2004-02-29  ujwal

	* Fixed bug in [PseudoTerminal saveSession:].
	* Added more code for keybinding manager. Still incomplete.

2004-02-27 fabian
	
	* Fixed a bug in [VT100Screen putToken], ANSIECH, which causes a crash.
	
2004-02-27  ujwal

	* Added support for secondary device attribute.
	* Changed Device Attribute response to "VT100 with Advanced Video Option"
	* Fixed double click selection bug.

2004-02-26  fabian

	* Fixed reversed screen mode bug
	* Now blinking characters on screen are synchronized
	* Removed ARRAY/BUFFER mode indicator in About dialog.
	
2004-02-26  ujwal

	* Fixed a couple of emulation problems with reverse video on 
	  OpenVMS systems in scrollDown and scrollUp. New lines now have 
	  fg and bg colors of the line they just replaced.

2004-02-25  ujwal

	* Fixed display bug in scrollUp.
	* Change cursor when window becomes/resigns key.

2004-02-25  fabian

	* Changed all the html docs into shtml
	* Made some attempt to allow selections to follow changes on screen
	* Fixed an underline drawing bug
	
2004-02-24  fabian

	* Fixed a double-width character handling bug in PTYTextView
	* Find Panel is now working. Limitation: doesn't search across lines.
	* Blink now only happens for key window.
	* Non-key or no-input windows now have a slower refresh rate.
	
2004-02-24  ujwal

	* Added back support for blinking cursor. Reduced blink frequency.
	* Added back support for "Focus follows mouse".
	* Added back support for cmd +/- to change font size on the fly.
	* Removed preference for "Enforce character alignment".
	* Made PreferencePanel a NSWindowController.

2004-02-23  ujwal

	* Added support for setting cursor color.
	* Changed bold behavior by redrawing character. 
	  Bold now works for all fonts.
	* Fixed config panel nibs.

2004-02-23  fabian

	* Fixed bug in [PTYTextView getCharImage].
	* Changed blinking behavior. No we no longer reverse fg/bg
	* Changed bold behavior. Bold now works for all fonts.
	
2004-02-22  ujwal
